--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,11 @@
             "name": "Jordi Domènech Bonilla",
             "email": "jdomenechb.borges@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "Jdomenechb\\BRChain\\": "src/",
+            "Jdomenechb\\BRChain\\Tests\\": "tests/"
+        }
+    }
 }
