Travis execution to run verbose

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - composer install --dev --prefer-source --no-interaction
 
 script:
-  - php vendor/bin/phpspec run
+  - php vendor/bin/phpspec run -v
