--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,14 @@
     },
 
     "require-dev": {
-        "phpspec/phpspec": "^4.2",
-        "symfony/yaml": "^4.0"
+        "phpspec/phpspec": "^4.3",
+        "symfony/yaml": "^4.0",
+        "friendsofphp/php-cs-fixer": "^2.9"
+    },
+
+    "scripts": {
+        "spec": "vendor/bin/phpspec",
+
+        "check-styles": "vendor/bin/php-cs-fixer"
     }
 }
